<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".PlayersActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_weight="1">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_players"
                android:id="@+id/select_text"
                android:layout_weight="1"
                android:layout_margin="2dip" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/current_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_player"
                android:id="@+id/new_text"
                android:layout_margin="2dip" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/new_player_name"
                android:imeOptions="actionDone"
                android:layout_below="@+id/new_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                android:id="@+id/add_button"
                android:layout_below="@+id/new_player_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/recent_players"
                android:id="@+id/recent_text"
                android:layout_below="@+id/add_button"
                android:layout_margin="2dip" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recent_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recent_text"/>

        </RelativeLayout>


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dip"
        android:text="@string/start"
        android:id="@+id/start_button" />


</LinearLayout>
